--- a/shard.yml
+++ b/shard.yml
@@ -11,6 +11,17 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+  jwt:
+    github: crystal-community/jwt
+  kemal-auth-token:
+    github: akwiatkowski/kemal-auth-token
+  redis:
+    github: stefanwille/crystal-redis
+    version: ~> 2.1.1
+  granite:
+    github: amberframework/granite
+  mysql:
+    github: crystal-lang/crystal-mysql
 
 crystal: 0.24.2
 
