:card_file_box: :heavy_plus_sign: :heavy_minus_sign: :recycle: :construction: :sparkles: Se agregaron las clases para la libreria de mongo que hara gelocalizacion. Se hicieron pruebas de insersion y busqueda. Agregamos notas.

--- a/shard.yml
+++ b/shard.yml
@@ -18,10 +18,13 @@ dependencies:
   redis:
     github: stefanwille/crystal-redis
     version: ~> 2.1.1
-  granite:
-    github: amberframework/granite
   mysql:
     github: crystal-lang/crystal-mysql
+  mongo:
+    github: datanoise/mongo.cr
+    branch: master
+  bson:
+    github: jeromegn/bson.cr
 
 crystal: 0.24.2
 
