:heavy_plus_sign: :heavy_minus_sign: Agregado actualización de modulos para mongo. Nuevo modulo de mongodb.

--- a/shard.yml
+++ b/shard.yml
@@ -21,8 +21,7 @@ dependencies:
   mysql:
     github: crystal-lang/crystal-mysql
   mongo:
-    github: datanoise/mongo.cr
-    branch: master
+    github: kimvex/mongodb-crystal
   bson:
     github: jeromegn/bson.cr
 
